--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
   },
   "dependencies": {
     "bootstrap": "^4.5.2",
+    "dotenv": "^8.2.0",
     "dotenv-webpack": "^7.0.2",
     "jquery": "^3.6.0",
     "popper.js": "^1.14.3"
